--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.6.2",
-    "framer-motion": "^10.16.4"
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.0.0",
-    "tailwindcss": "^3.0.0"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^4.0.0"
   }
 }
